# oriole

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  doNotForget.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: github-actions-demo.yml
app/: .env.template  main.py  pre_start.sh
app/alembic/: env.py
app/alembic/versions/: 2025_03_18_0553-469e584729d7_initial.py  2025_03_20_1237-c224fba9a101_create_new_users_table.py  2025_03_25_1629-5fb32412f74a_create_access_token_table.py  2025_03_25_1805-3ab6e1354f19_create_user_profles_table.py  2025_04_01_1639-6819d3364a53_create_assignment.py  2025_04_12_0054-d770849c18e4_add_account_to_db.py  2025_04_12_0118-45fde44bc98b_update_account_tables.py  2025_04_15_1527-ca2e1604f9d6_update_users_lenght_table.py  2025_04_16_2323-ff4557512b96_change_access_tokens_table.py  2025_04_17_1147-18c0feb3dae4_create_tokens_table.py  2025_04_21_2126-02e3e53fcf14_change_timestamp_to_int.py  2025_04_27_1207-8f681bf247f7_update_task.py  2025_05_01_1447-b76850d5ce14_create_deadlines.py
app/api/api_v1/: __init__.py  assignments.py  auth.py  email_access.py  fastapi_users.py  groups.py  messages.py  tasks.py  users.py
app/api/api_v1/dependencies/: access_tokens.py  users.py
app/core/: config.py  events.py
app/core/authentication/: transport.py  user_manager.py
app/core/exceptions/: assignment.py  group.py  task.py  user.py
app/core/models/: __init__.py  access_token.py  account.py  assignment.py  base.py  db_helper.py  group.py  task.py  user.py  user_group_association.py  user_profile.py  user_reply.py
app/core/redis/: __init__.py
app/core/schemas/: account.py  assignment.py  group.py  task.py  token.py  user.py  user_reply.py
app/crud/: assignments.py  auth.py  dependencies.py  email_access.py  groups.py  tasks.py  users.py
app/utils/: JWT.py  case_converter.py  number_optimizer.py
docker_build/app/: Dockerfile
docker_build/backend/: Dockerfile
docker_build/base_image/: Dockerfile
docker_build/frontend/: Dockerfile
docker_build/migrations/: Dockerfile
i18n/: Documentation.md  README_ru.md
logging/: promtail-config.yaml
logging/grafana/: database.yaml
logging/grafana/dashboards/: dashboard.json
logging/grafana/provisioning/dashboards/: dashboard.yaml
nginx/: nginx.dev.conf  nginx.prod.conf
src/backend/: .env.app_config.example  .env.example  gunicorn_run.py  main.py  migations_update.sh  nginx_conf.sh  pre_start.sh
src/backend/alembic/: env.py
src/backend/alembic/versions/: 2025_04_17_1147-18c0feb3dae4_create_tokens_table.py  2025_04_23_1226-257f2b7c2f21_create_user_replys_table.py  2025_05_01_1843-773654948951_change_europe_moscow_to_utc.py  2025_05_17_2100-f6de201dd350_add_deadlines_to_assignments.py  2025_05_23_1134-95160571b5fb_add_model_for_safe_link_to_groups.py  2025_05_23_2145-4efff996de56_change_datetime_to_timestamp.py  2025_05_25_1652-67e9ec5d837c_change_int_to_datetime.py  2025_06_08_2154-7b400eaf49d4_new_tables.py  2025_06_25_1120-aaaffe6fa20b_create_messages_table.py  2025_06_26_1405-e7d5ad014471_add_messages_table.py  2025_06_28_0843-3fe8ddc2e1b1_add_reply_to_column_to_messages.py  2025_07_03_1246-1b724a06b8e4_create_chat_and_messages_tables.py  2025_07_04_0804-e4b002f2da08_add_base_classes.py  2025_07_04_0843-267fdd7da2ae_add_code_tasks_model.py  2025_07_04_0845-a0c9b849ca80_add_tests_table.py  2025_07_04_0909-0033c3622eb4_change_invites_table.py  2025_07_05_0801-82aeaa4f1ab9_add_code_solutions_table.py  2025_07_06_0919-b1ade672322c_add_status_in_code_solutions_table.py  2025_07_06_1039-d142939da173_add_telegram_id_to_users.py  2025_07_06_1807-42f061eab254_remove_some_properties.py  2025_07_07_0934-3eee872825ac_change_nullable_fields_in_users.py  2025_07_09_1719-2322a7a00598_all_new_things.py  2025_07_10_0932-0454238a41fe_add_new_tasks_and_solutions_objects.py  (+7 more)
src/backend/api/: __init__.py
src/backend/api/api_v1/: auth.py  (+6 more)
src/backend/core/: backgorund_tasks.py  config.py  events.py
src/backend/crud/: assignments.py  auth.py  email_access.py  groups.py  tasks.py  users.py
src/backend/database/: __init__.py  base.py  db_helper.py
src/backend/exceptions/: assignment.py  group.py  task.py  token.py  user.py
src/backend/features/: __init__.py
src/backend/middlewares/: __init__.py  cache.py  exception.py  limiter.py  logging.py
src/backend/utils/: JWT.py  __init__.py  auth_helper.py  code_check.py  code_generator.py  response_func.py  schemas.py  time_manager.py  utc_converter.py
src/backend/validators/: __init__.py  timing.py
src/frontend/: package-lock.json  vite.config.js
src/frontend/src/: App.jsx  main.jsx
src/tests/: conftest.py
src/tests/integration/: test_health_check.py
src/tests/unit/: test_tasks.py  test_utils.py
(+547 files in other folders)
