[project]
name = "oriole"
version = "0.1.2"
description = "Oriole is a mentor-learner platform that simplifies education beyond formal systems"
authors = [
    { name = "Timofey Pupykin", email = "pupykint@gmail.com" },
    { name = "Artem Saveliev", email = "whard8y@gmail.com" },
    { name = "Mikhail Khorokhorin", email = "mikhailkhorokhorin@gmail.com" },
    { name = "Robert Savitskas", email = "savrobartrobsav@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.39,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "taskiq (>=0.11.13,<0.12.0)",
    "taskiq-aio-pika (>=0.4.1,<0.5.0)",
    "pyjwt[crypto] (>=2.0.0,<3.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "redis (>=5.3.0,<6.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "celery (>=5.5.2,<6.0.0)",
    "kombu (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "inflect (>=7.5.0,<8.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
